// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oauth2 introspect 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "61",
    "content-type": "application/x-www-form-urlencoded;charset=UTF-8",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "include": "session_info,identity_set",
    "token": "abc-def-ghi",
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/oauth/token/introspect",
}
`;

exports[`oauth2 revoke 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "23",
    "content-type": "application/x-www-form-urlencoded;charset=UTF-8",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "token": "abc-def-ghi",
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/oauth/token/revoke",
}
`;

exports[`oauth2 validate 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "50",
    "content-type": "application/x-www-form-urlencoded;charset=UTF-8",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "client_id": "my-client-id",
    "token": "abc-def-ghi",
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/oauth/token/validate",
}
`;
